--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: FreeMunk
-description: Freedom, now on your school laptop.
-remote_theme: "dracula/gh-pages"
+title: FREEMUNK
+description: BEVRIJD JE SCHOOL LAPTOP
+remote_theme: "pages-themes/hacker@v0.2.0"
