--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: FREEMUNK
 description: BEVRIJD JE SCHOOL LAPTOP
-remote_theme: "pages-themes/hacker@v0.2.0"
+remote_theme: "alshedivat/al-folio"
