--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: FREEMUNK
 description: BEVRIJD JE SCHOOL LAPTOP
-theme: "mmistakes/so-simple-theme@3.2.0"
+remote_theme: "mmistakes/so-simple-theme@3.2.0"
 skin: "/assets/css/skins/dark.css"
